sl-lsl/tests/corpus/error/missing_default_state.lsl
// A script with states but no `default` state — LSL requires one.
state waiting
{
    state_entry()
    {
        llSay(0, "no default here");
    }
}
